...
    android:layout_height="match_parent"
    tools:context=".view.CameraActivity">



    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

<!--    <Button-->
<!--        android:id="@+id/captureButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->
<!--        android:layout_marginStart="293dp"-->
<!--        android:text="Capture"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
...
