<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="Beranda" />
    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/ic_camera"
        android:title="Kamera" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="Riwayat" />
    <item
        android:id="@+id/nlpFragment"
        android:icon="@drawable/ic_chat"
        android:title="P&amp;J" />
</menu>
